Rim|#42|updates of footer and home page

--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -65,26 +65,8 @@
 
     </div>
 <body>
-    
-    
     <div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 102px;">
         <div id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
-            <ul class="amazingslider-slides" style="display:none;">
-                <li><img src="/static/galleryimages/1.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/2.jpg" alt="TRAINER TEAM"  title="TRAINER TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/3.jpg" alt="DEV. + UI/UX"  title="DEV. + UI/UX" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/4.jpg" alt="SESSION"  title="SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/5.jpg" alt="BRAIN STORM"  title="BRAIN STORM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/6.jpg" alt="DEV. SESSION"  title="DEV. SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-                <li><img src="/static/galleryimages/7.jpg" alt="JOINT SESSION"  title="JOINT SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
-                </li>
-            </ul>
             <ul class="amazingslider-thumbnails" style="display:none;">
                 <li><img src="/static/galleryimages/1-tn.jpg" alt="STUDENTS" title="STUDENTS" /></li>
                 <li><img src="/static/galleryimages/2-tn.jpg" alt="TRAINER TEAM" title="TRAINER TEAM" /></li>
@@ -98,94 +80,57 @@
     </div>
     
     <footer align="center">
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
-      <h4> </h4>
-      <div>
-
-        <p>
-       
-    </div>
-
-<div id="patcont">
-
-<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us | <a id="partners" href="javascript:;">Partners </font></a>
-
-</a> 
-
-</div>
-
-<div id="socialmedia" align="right">
-
-
-<script>
-            $("#contact-us").click(function() {
-                $.fancybox.open({
-                    href: '/static/htmls/contacts.html',
-                    type: 'iframe',
-                    padding: 2
-                });
-                });
-                </script>
-
-                <script>
-$("#partners").click(function() {
-$.fancybox.open({
-href: '/static/htmls/partners.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-
+<div align="right">
+<ls>             
 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
     <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
 </a>
 <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
 <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-</a>
-
-</div>
-            
-
-
-<li><a id="termscons" href="javascript:;"> <font size="0.5" > &nbsp;&nbsp;Terms&Conditions |</font></a></li>
+</a></div>
+<div align="justify">
+  <ls><a id="contact-us" href="javascript:;"><font size="4" font color="grey"> Contact Us </font></a>
 <script>
-$("#termscons").click(function() {
-$.fancybox.open({
-href: '/static/htmls/termscons.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-<li><a id="privacy" href="javascript:;"><font size="0.5"> Privacy Policy </font></a></li>
+                $("#contact-us").click(function() {
+                $.fancybox.open({
+                href: '/static/htmls/contacts.html',
+                type: 'iframe',
+                padding: 2
+                });
+                });
+                </script></ls>&nbsp;
+<ls><a id="partners" href="javascript:;"><font size="4" font color="grey">| Our Partners  </font></a>
+  <script>
+                $("#partners").click(function() {
+                $.fancybox.open({
+                href: '/static/htmls/partners.html',
+                type: 'iframe',
+                padding: 2
+                });
+                });
+                </script></ls>&nbsp;
+<ls><a id="termscons" href="javascript:;"><font size="4" font color="grey">| Terms&Conditions </font></a>
+<script>
+                $("#termscons").click(function() {
+                $.fancybox.open({
+                href: '/static/htmls/termscons.html',
+                type: 'iframe',
+                padding: 2
+                });
+                });
+</script></ls>&nbsp;
+<ls><a id="privacy" href="javascript:;"><font size="4" font color="grey">| Privacy Policy  </font></a>
 <script>
 $("#privacy").click(function() {
 $.fancybox.open({
 href: '/static/htmls/privacy.html',
 type: 'iframe',
-padding: 5
+padding: 2
 });
 });
-</script>
-      <div id="cpy">
-      <p>Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </p>
-      </div>
-    </div>
-  </div>
-  <hr>
-</div>
-
-
-
-
-
+</script></ls>&nbsp;
+<ls><a href="#">| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls></div>
 </footer>
-
-
-    
 </body>
 </html>
