--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>KSC</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="/static/slippry/dist/slippry.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-<link rel="stylesheet" href="/static/css/home_style.css">
-
-<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-<link rel="stylesheet" href="/static/css/home.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-
-
+    <title>KSC</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
     <script src="/static/sliderengine/jquery.js"></script>
     <script src="/static/sliderengine/amazingslider.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
     <script src="/static/sliderengine/initslider-1.js"></script>
-
-
 </head>
 <header>
-
     <div id="langbar" align="right">
         <select>
             <option>Language</option>
@@ -31,48 +25,39 @@
             <option value="French">French</option>
         </select>
     </div>
-
-
-
     <div id="menu" class="clear">
-
-
-
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
+        <a href="/">
+            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
+        </a>
         <ul align="center" id="bar">
             <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
+            <li><a href="/upcomingevents">Events</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
-
     </div>
-
-
-    
 </header>
+</div>
 
-    </div>
-<body>   
-
-<div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 48px;">
+<body>
+    <div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 48px;">
         <div id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
             <ul class="amazingslider-slides" style="display:none;">
-                <li><img src="/static/image/1.jpg" alt="STAND UP"  title="STAND UP" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/1.jpg" alt="STAND UP" title="STAND UP" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/2.jpg" alt="TRAINING TEAM"  title="TRAINING TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/2.jpg" alt="TRAINING TEAM" title="TRAINING TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/3.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/3.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/4.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/4.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/5.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/5.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/6.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/6.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/image/7.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/image/7.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
             </ul>
             <ul class="amazingslider-thumbnails" style="display:none;">
@@ -86,125 +71,102 @@
             </ul>
         </div>
     </div>
-
-
-
-
-
-  <div class="container-fluid" align="center">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h1 id="m"class="text-center">Welcome To Knowledge Sharing Campaign</h1>
+    <div class="container-fluid" align="center">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h1 id="m" class="text-center">Welcome To Knowledge Sharing Campaign</h1>
+            </div>
+        </div>
+        <hr>
     </div>
-  </div>
-  <hr>
-</div>
-<div class="container">
-  <div class="row text-center">
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-12">
-      <div class="well" align="center"><strong> In Africa, when an old man dies, it’s a library burning – Spoken by Amadou Hampâté Bâ 1960 at UNESCO”. Here is a way to value your knowledge..</strong></div>
+    <div class="container">
+        <div class="row text-center">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.
+        </div>
+        <hr>
+        <div class="row">
+            <div class="text-center col-md-12">
+                <div class="well" align="center"><strong> In Africa, when an old man dies, it’s a library burning – Spoken by Amadou Hampâté Bâ 1960 at UNESCO”. Here is a way to value your knowledge..</strong></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></div>
+            <div class="col-xs-4"><span class="glyphicon glyphicon-home" aria-hidden="true"> </span> </div>
+            <div class="col-xs-4"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></div>
+        </div>
     </div>
-  </div>
-  
-      <div class="row">
-        <div class="col-xs-4"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></div>
-        <div class="col-xs-4"><span class="glyphicon glyphicon-home" aria-hidden="true"> </span> </div>
-        <div class="col-xs-4"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></div>
-      </div>
     </div>
-  </div>
-<footer align="center">
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
-      <h4> </h4>
-      <div>
-
-        <p>
-       
-    </div>
-
-<div id="patcont">
-
-<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us | <a id="partners" href="javascript:;">Partners </font></a>
-
-</a> 
-
-</div>
-
-<div id="socialmedia" align="right">
-
-
-<script>
-            $("#contact-us").click(function() {
-                $.fancybox.open({
-                    href: '/static/htmls/contacts.html',
+    <footer align="center">
+        <ls>
+            <div align="right">
+                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+                </a>
+                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+                </a>
+            </div>
+            <div align="justify">
+                <ls>
+                    <a id="contactus" href="javascript:;">
+                        <font size="3"><b> Contact Us </b></font>
+                    </a>
+                    <script>
+                    $("#partners").click(function() {
+                        $.fancybox.open({
+                        href: '/static/htmls/contacts.html',
+                        type: 'iframe',
+                        padding: 2
+                        });
+                        });
+                    </script>
+                </ls>&nbsp;
+                <ls>
+                    <a id="partners" href="javascript:;">
+                        <font size="3"><b>| Our Partners  </b></font>
+                    </a>
+                    <script>
+                    $("#partners").click(function() {
+                        $.fancybox.open({
+                        href: '/static/htmls/partners.html',
+                        type: 'iframe',
+                        padding: 2
+                        });
+                        });
+                    </script>
+                </ls>&nbsp;
+                <ls>
+                    <a id="termscons" href="javascript:;">
+                        <font size="3"><b>| Terms&Conditions </font></b></a>
+                    <script>
+                    $("#termscons").click(function() {
+                        $.fancybox.open({
+                        href: '/static/htmls/termscons.html',
+                        type: 'iframe',
+                        padding: 2
+                        });
+                        });
+                    </script>
+                </ls>&nbsp;
+                <ls>
+                    <a id="privacy" href="javascript:;">
+                    <font size="3"><b>| Privacy Policy  </font></b></a>
+                </ls>&nbsp;
+                    <script>
+                    $("#privacy").click(function() {
+                    $.fancybox.open({
+                    href: '/static/htmls/privacy.html',
                     type: 'iframe',
                     padding: 2
-                });
-                });
-                </script>
-
-                <script>
-$("#partners").click(function() {
-$.fancybox.open({
-href: '/static/htmls/partners.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-
-<a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-</a>
-<a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-<a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-</a>
-
-</div>
-            
-
-
-<li><a id="termscons" href="javascript:;"> <font size="0.5" > &nbsp;&nbsp;Terms&Conditions |</font></a></li>
-<script>
-$("#termscons").click(function() {
-$.fancybox.open({
-href: '/static/htmls/termscons.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-<li><a id="privacy" href="javascript:;"><font size="0.5"> Privacy Policy </font></a></li>
-<script>
-$("#privacy").click(function() {
-$.fancybox.open({
-href: '/static/htmls/privacy.html',
-type: 'iframe',
-padding: 5
-});
-});
-</script>
-      <div id="cpy">
-      <p>Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </p>
-      </div>
-    </div>
-  </div>
-  <hr>
-</div>
-
-
-
-
-
-</footer>
-
-
+                    });
+                    });
+            </script>
+        </ls>&nbsp;
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></b>
+        </ls>
+        </div>
+    </footer>
 </body>
+
 </html>
